# HPNum

./: README.md
src/: .clang_complete  CMakeLists.txt
src/cmake/: FindLapackE.cmake
src/libcore/: CMakeLists.txt  CMakeLists.txt~  README.md
src/libcore/include/core/: chronometer.hpp  detect_container.hpp  log_to_file.hpp  log_to_std_error.hpp  log_to_std_output.hpp  logger  logger.hpp  multitimer  multitimer.hpp  multitimer.tpp  numerical_comparison  numerical_comparison.hpp  numerical_comparison.tpp  range.hpp  std_cpp_chronometer.hpp  uvector.hpp
src/libcore/src/: chronometer.cpp  log_to_file.cpp  log_to_file.cpp~  log_to_std_error.cpp  log_to_std_output.cpp  logger.cpp  logger.cpp~  multitimer.cpp  numerical_precision.cpp  numerical_precision.cpp~  std_cpp_chronometer.cpp
src/libcore/test/: test_logger.cpp  test_logger.cpp~  test_multitimer.cpp  test_range.cpp
src/libgeometry/: CMakeLists.txt
src/libgeometry/include/geometry/: boundingbox  boundingbox.hpp  boundingbox.tpp  box  box.hpp  box.tpp  kdtree  kdtree.hpp  kdtree.tpp  stride.hpp  tolerance.hpp
src/libgeometry/src/: boundingbox.cpp  box.cpp  kdtree.cpp  tolerance.cpp
src/libgeometry/test/: test_boundingbox.cpp  test_box.cpp  test_box.cpp~
src/libgui/: CMakeLists.txt
src/libgui/include/gui/: point.hpp
src/libgui/src/: event_manager.cpp
src/liblinearalgebra/: CMakeLists.txt  CMakeLists.txt~
src/liblinearalgebra/include/linearalgebra/: blas.hpp  blas1.hpp  blas2.hpp  blas2ext  blas2ext.hpp  blas2ext.tpp  blas3.hpp  lapack_least_square.hpp  lapack_linear_equations.hpp  lapack_svd.hpp
src/liblinearalgebra/src/: blas2ext.cpp
src/libparallel/: CMakeLists.txt
src/libparallel/data/: logo.xcf
src/libparallel/include/parallel/: chronometer_implementation.hpp  communicator  communicator.hpp  communicator.tpp  communicator_mpi.tpp  constantes.hpp  context.hpp  log_from_distributed_file.hpp  log_from_root_output.hpp  parallel.hpp  request.hpp  status.hpp
src/libparallel/src/: communicator.cpp  context_mpi.cpp  context_stub.cpp  log_from_distributed_file.cpp
src/libparallel/test/: test_HelloWorld.cpp  test_communicator.cpp  test_parallelmatrixmatrixproduct.cpp
src/projets/: CMakeLists.txt
src/projets/initiation_distributed_para/: CMakeLists.txt
src/projets/initiation_distributed_para/src/: HelloWorld.cpp  hypercube.cpp  token_ring_asynchronous.cpp  token_ring_synchronous.cpp  two_proc_exchange.cpp
src/projets/lifegame/: CMakeLists.txt
src/projets/lifegame/data/: floraison.dat~  u.dat~
src/projets/lifegame/src/: lifegame.cpp
src/projets/parallel_matrix/: CMakeLists.txt  parallel_block_matrix.cpp
